@@ -12,6 +12,7 @@ Incompatible changes
 Features added
 --------------
 
+* #3178: Add ``classindex`` and ``funindex`` indeces to the Python domain. Thanks to Lilian Besson.
 * #3136: Add ``:name:`` option to the directives in ``sphinx.ext.graphviz``
 * #2336: Add ``imported_members`` option to ``sphinx-autogen`` command to document
   imported members.
